[gd_scene load_steps=2 format=3 uid="uid://3q4xssgkfqfd"]

[ext_resource type="Script" uid="uid://udsjy2frw6jc" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Node2D"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Button_Instructions" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Instructions"

[node name="Button_Start" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button_Exit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MainMenu/VBoxContainer/Button_Instructions" to="MainMenu" method="_on_instructions_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Button_Start" to="MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Button_Exit" to="MainMenu" method="_on_exit_button_pressed"]
