[gd_scene load_steps=4 format=3 uid="uid://3q4xssgkfqfd"]

[ext_resource type="Script" uid="uid://udsjy2frw6jc" path="res://scripts/main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://cay2lpyyokjpg" path="res://background_images/main_menu_image.png" id="1_7vrkn"]
[ext_resource type="Theme" uid="uid://b8gb88bprbuf2" path="res://main_theme.tres" id="2_bqqt6"]

[node name="MainMenu" type="Node2D"]

[node name="MainMenuBackground" type="TextureRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -1.0
offset_right = 2869.0
offset_bottom = 1546.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.404446, 0.458266)
texture = ExtResource("1_7vrkn")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
theme = ExtResource("2_bqqt6")
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 448.0
offset_top = 572.0
offset_right = 700.0
offset_bottom = 703.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Button_Family" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button_Start" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Casual Mode"

[connection signal="pressed" from="MainMenu/VBoxContainer/Button_Family" to="MainMenu" method="_on_button_family_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Button_Start" to="MainMenu" method="_on_start_button_pressed"]
